# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  minishell  minishell.h
libft/: Makefile  ft_arrdup.c  ft_arrlen.c  ft_atol.c  ft_atoul.c  ft_exclude.c  ft_free_arr.c  ft_free_strs.c  ft_isnumeric.c  ft_lstadd_back.c  ft_lstdelone.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_skipchar.c  ft_skipnchar.c  ft_split.c  ft_strcut.c  ft_strdup.c  ft_strjoin.c  ft_strncmp.c  ft_strndup.c  ft_unite.c  libft.h  libft.h.gch
sources/: command_center.c  here_doc.c  main.c  parse_example.c  parser.c  parser.d  pipex.c  pipex_last.c  pipex_utils.c  redirects.c  shell_utils.c  signals.c
sources/builtin/: Makefile  builtin.h  builtin_utils.c  cd.c  cd_utils.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
sources/include.d/: builtin.h  include.h  logic.h  minishell.h  parser.h
sources/parser/: Makefile  command.c  command_line.c  expand.c  get.c  main.c  open.c  parser  parser.c  parser.h  parser_utils.c  skip.c
sources/pipex/: here_doc.c  pipex.c  pipex_last.c  pipex_utils.c  redirects.c
sources/shell/: command_center.c  main.c  shell_utils.c  signals.c
